--- a/CxcIPConfig/CxcIPConfig.vcxproj.filters
+++ b/CxcIPConfig/CxcIPConfig.vcxproj.filters
@@ -11,18 +11,18 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CxcIPConfig.cpp">
+    <ClCompile Include="..\src\stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="stdafx.cpp">
+    <ClCompile Include="CxcIPConfig.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CxcIPConfig.h">
+    <ClInclude Include="..\src\stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="stdafx.h">
+    <ClInclude Include="CxcIPConfig.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
