+Util.h/cpp;+WindowAPIError.h/cpp;+HKEYWrapper.h/cpp

--- a/CxcIPConfig/CxcIPConfig.vcxproj
+++ b/CxcIPConfig/CxcIPConfig.vcxproj
@@ -147,6 +147,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\src\CxcIPConfig.cpp" />
+    <ClCompile Include="..\src\HKEYWrapper.cpp" />
     <ClCompile Include="..\src\IphlpApiWrapper.cpp" />
     <ClCompile Include="..\src\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -154,11 +155,16 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="..\src\Util.cpp" />
+    <ClCompile Include="..\src\WindowsAPIError.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\CxcIPConfig.h" />
+    <ClInclude Include="..\src\HKEYWrapper.h" />
     <ClInclude Include="..\src\IphlpApiWrapper.h" />
     <ClInclude Include="..\src\stdafx.h" />
+    <ClInclude Include="..\src\Util.h" />
+    <ClInclude Include="..\src\WindowsAPIError.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
