--- a/CxcIPConfig/CxcIPConfig.vcxproj.filters
+++ b/CxcIPConfig/CxcIPConfig.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="..\src\CxcIPConfigGUI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\CxcIPConfigMain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\stdafx.h">
